fix: fix textarea resize out of bound

--- a/style.css
+++ b/style.css
@@ -421,6 +421,8 @@ footer{
     width: 100%;
     height: 100%;
     padding: 5px;
+    max-height: 100%;
+    resize: none;
 }
 
 #about #email-button{
